# memoryCapture

./: Averages.cpp  Averages.h  ByteFrequencyDB.cpp  ByteFrequencyDB.h  CMakeLists.txt  ConversionToProbabilityDistribution.cpp  ConversionToProbabilityDistribution.h  FP754.cpp  FP754.h  LSH.cpp  LSH.h  ProbDistFuncs.cpp  ProbDistFuncs.h  README.md  captureManager.h  cepstrum.cpp  cepstrum.h  complexDistance.cpp  complexDistance.h  deltaManager.cpp  deltaManager.h  distanceFunction.cpp  distanceFunction.h  fourier.cpp  fourier.h  main.cpp  outputBD.csv  outputCos.csv  outputHD.csv  outputKL.csv  periodicCapture.py
